[gd_scene load_steps=12 format=3 uid="uid://bhovxypq24b7l"]

[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/AsteroidFactory.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cskxfp1i4ylov" path="res://scenes/HUD.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://nyrrcxehpvxg" path="res://art/parallax/background.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cayqmb8e2e14t" path="res://art/parallax/stars_1.png" id="8"]
[ext_resource type="AudioStream" uid="uid://daq2arxm00q2" path="res://audio/Alone Against Enemy.ogg" id="8_mp70p"]
[ext_resource type="Texture2D" uid="uid://ccs2qkstqxi8d" path="res://art/parallax/stars_2.png" id="9"]
[ext_resource type="AudioStream" uid="uid://b6tlgv0sku5sp" path="res://audio/Defeated (Game Over Tune).ogg" id="9_lwrtv"]

[sub_resource type="GDScript" id="4"]
script/source = "extends ParallaxBackground

var scroll_y = 0

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.y += 100 * delta
	pass
"

[sub_resource type="Curve2D" id="5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 960, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("2")
asteroid_factory_scene = ExtResource("3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource("4")

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(2.08165e-12, 1440)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
position = Vector2(506, 725)
scale = Vector2(2, 2)
texture = ExtResource("7")

[node name="Stars_1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(2.08165e-12, 1440)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Stars_1"]
position = Vector2(475, 723)
scale = Vector2(2, 2)
texture = ExtResource("8")

[node name="Stars_2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2.08165e-12, 1440)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Stars_2"]
position = Vector2(508, 718)
scale = Vector2(2, 2)
texture = ExtResource("9")

[node name="Player" parent="." instance=ExtResource("1")]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mp70p")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lwrtv")

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource("5")

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
